--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,3 +19,6 @@
 @import "./blocks/photo-sedona.scss";
 @import "./blocks/maps.scss";
 @import "./blocks/main-index.scss";
+@import "./blocks/copyright.scss";
+@import "./blocks/visually-hidden.scss";
+@import "./blocks/social.scss";
