--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -1,9 +1,11 @@
 <footer class="main-footer">
+
+
   <div class="main-footer__wrapper">
     <div class="main-footer__contacts contacts">
-      <a class="contacts__link" href="https://twitter.com/hashtag/VisitSedona">#visitSEDONA</a>
+      <a class="main-footer__contacts__link" href="https://twitter.com/hashtag/VisitSedona">#visitSEDONA</a>
     </div>
-    <div class="main-footer__social">
+    <div class="social">
       <b class="social__title visually-hidden">Давайте дружить!</b>
       <ul class="social__list">
         <li class="social__item button">
@@ -23,7 +25,12 @@
         </li>
       </ul>
     </div>
+    <div class="copyright">
       <b class="copyright__text">Разработано</b>
-      <a class="copyright__link visually-hidden" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+      <svg class="copyright__link" width="27" height="35">
+        <use href="../img/sprite.svg#htmlacademy">
+      </svg>
+      <a class="visually-hidden" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+    </div>
   </div>
 </footer>
