--- a/source/sass/blocks/emotions.scss
+++ b/source/sass/blocks/emotions.scss
@@ -16,7 +16,7 @@
   }
 }
 
-textarea {
+.emotions__field {
   background: #f2f2f2; /* Цвет фона */
   color: rgba(0, 0, 0, 0.3);
   border: 0; /* Параметры рамки */
