--- a/source/sass/blocks/attraction.scss
+++ b/source/sass/blocks/attraction.scss
@@ -1,18 +1,3 @@
-.attraction {
-  margin-top: 49px;
-  margin-bottom: 49px;
-
-  @media (--tablet) {
-    margin-top: 48px;
-    margin-bottom: 42px;
-  }
-
-  @media (--desktop) {
-    margin-top: 56px;
-    margin-bottom: 56px;
-  }
-}
-
 .attraction__title {
   font-weight: 700;
   font-size: 18px;
@@ -20,19 +5,19 @@
   align-items: center;
   text-align: center;
   text-transform: uppercase;
-  margin: 0;
-  margin-bottom: 20px;
-
-  @media (--not-mobile) {
-    font-size: 21px;
-  }
+  width: 236px;
+  margin: 49px auto 20px;
 
   @media (--tablet) {
-    margin-bottom: 28px;
+    font-size: 21px;
+    width: 308px;
+    margin: 48px auto 20px;
+  }
 
-    @media (--desktop) {
-      margin-bottom: 56px;
-    }
+  @media (--desktop) {
+    font-size: 21px;
+    width: 306px;
+    margin: 56px auto 20px;
   }
 }
 
