--- a/source/sass/blocks/description.scss
+++ b/source/sass/blocks/description.scss
@@ -1,67 +1,3 @@
-.description {
-  text-align: center;
-
-  &--catalog {
-    text-align: center;
-    text-transform: uppercase;
-
-    @media (--tablet) {
-      margin-top: 62px;
-      margin-bottom: 61px;
-    }
-
-    @media (--desktop) {
-      margin-top: 104px;
-      margin-bottom: 69px;
-    }
-  }
-
-  &--form {
-    text-align: center;
-    text-transform: uppercase;
-
-    @media (--mobile) {
-      margin-top: 30px;
-      margin-bottom: 28px;
-    }
-
-    @media (--tablet) {
-      margin-top: 60px;
-      margin-bottom: 106px;
-    }
-
-    @media (--desktop) {
-      margin-top: 115px;
-      margin-bottom: 66px;
-    }
-  }
-}
-
-.description__header {
-  &--catalog {
-    @media (--mobile) {
-      width: 280px;
-      margin: auto;
-      margin-top: 33px;
-      margin-bottom: 31px;
-    }
-
-    @media (--tablet) {
-      width: 458px;
-      margin: auto;
-      margin-top: 62px;
-      margin-bottom: 63px;
-    }
-
-    @media (--desktop) {
-      width: 458px;
-      margin: auto;
-      margin-top: 100px;
-      margin-bottom: 65px;
-    }
-  }
-}
-
 .description__title {
   font-weight: 700;
   font-size: 18px;
@@ -92,25 +28,45 @@
     margin: 0;
 
     @media (--mobile) {
-      margin-bottom: 26px;
+      margin: 33px auto 26px;
+      width: 280px;
     }
 
-    @media (--not-mobile) {
+    @media (--tablet) {
+      width: 458px;
       font-size: 30px;
       line-height: 26px;
-      margin: 0;
-      margin-bottom: 26px;
+      margin: 66px auto 26px;
+    }
+
+    @media (--desktop) {
+      width: 458px;
+      font-size: 30px;
+      line-height: 26px;
+      margin: 104px auto 26px;
     }
   }
 
   &--form {
-    margin: 0;
     font-weight: 700;
     font-size: 18px;
     line-height: 26px;
+    align-items: center;
+    text-align: center;
+    text-transform: uppercase;
+    width: 280px;
+    margin: 36px auto 24px;
 
-    @media (--not-mobile) {
+    @media (--tablet) {
+      width: 435px;
       font-size: 30px;
+      margin: 64px auto 20px;
+    }
+
+    @media (--desktop) {
+      width: 435px;
+      font-size: 30px;
+      margin: 115px auto 20px;
     }
   }
 }
@@ -137,30 +93,40 @@
 
 
   &--catalog {
-    font-size: 14px;
-    line-height: 21px;
-    margin: 0;
+    @media (--mobile) {
+      width: 280px;
+      margin: 0 auto 36px;
+    }
+
+    @media (--tablet) {
+      width: 458px;
+      margin: 0 auto 83px;
+    }
+
+    @media (--desktop) {
+      width: 458px;
+      margin: 0 auto 85px;
+    }
   }
 
   &--form {
     font-size: 14px;
     line-height: 24px;
-    margin: 0;
-    margin-top: 24px;
-
-    @media (--not-mobile) {
-      br {
-        display: none;
-      }
-    }
+    width: 280px;
+    align-items: center;
+    text-align: center;
+    text-transform: uppercase;
+    margin: 0 auto 53px;
 
     @media (--tablet) {
-      line-height: 24px;
-      margin-top: 20px;
+      width: 435px;
+      margin: 0 auto 102px;
     }
 
     @media (--desktop) {
-      margin-top: 26px;
+      width: 435px;
+      line-height: 21px;
+      margin: 0 auto 66px;
     }
   }
 }
