--- a/source/sass/blocks/your-self.scss
+++ b/source/sass/blocks/your-self.scss
@@ -1,23 +1,16 @@
-.your-self {
-  margin-top: 24px;
-
-  @media (--not-mobile) {
-    margin-top: 0;
-  }
-}
-
 .your-self__title {
   text-transform: uppercase;
   text-align: center;
   font-weight: 700;
   font-size: 18px;
   line-height: 26px;
-  margin-top: 0;
-  margin-bottom: 20px;
+  width: 170px;
+  margin: 0 auto 20px;
 
   @media (--not-mobile) {
+    width: 160px;
     font-size: 21px;
-    margin-bottom: 28px;
+    margin: 0 auto 28px;
   }
 }
 
