--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -22,3 +22,4 @@
 @import "./blocks/copyright.scss";
 @import "./blocks/visually-hidden.scss";
 @import "./blocks/social.scss";
+@import "./blocks/video.scss";
