--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,6 +15,7 @@
 @import "./blocks/catalog.scss";
 @import "./global/fonts.scss";
 @import "./global/viewports.scss";
+@import "./blocks/main-header.scss";
 @import "./blocks/main-footer.scss";
 @import "./blocks/photo-sedona.scss";
 @import "./blocks/maps.scss";
@@ -23,3 +24,5 @@
 @import "./blocks/visually-hidden.scss";
 @import "./blocks/social.scss";
 @import "./blocks/video.scss";
+@import "./blocks/site-list.scss";
+@import "./blocks/main-nav.scss";
