--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -1,5 +1,5 @@
 <header class="main-header">
-  <nav class="main-nav">
+  <nav class="main-nav main-nav--opened main-nav--nojs">
     <button class="main-nav__toggle" type="button">
       <span class="visually-hidden">Открыть меню</span>
     </button>
@@ -7,7 +7,7 @@
       <a class="main-header__logo" href="index.html" {% if permalink == "index.html" %}aria-current="page"{% endif %}>
         <img class="main-header__logo-image" src="./img/logo.png" width="185" height="96" alt="Логотип Седона">
       </a>
-      <ul class="main-nav__list site-list">
+      <ul class="main-nav__list d site-list">
         {% for page in pages %}
           <li class="site-list__item">
             <a class="site-list__link" href="{{ page.path }}" {% if permalink == page.path %} aria-current="page" {% endif %}>{{ page.name }}</a>
