--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -11,4 +11,14 @@
   height: 96px;
   width: 185px;
   margin-left: 67px;
+
+  @media (--tablet) {
+    margin: 0;
+    left: 291px;
+  }
+
+  @media (--desktop) {
+    margin: 0;
+    left: 508px;
+  }
 }
