--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -1,5 +1,5 @@
 <header class="main-header">
-  <nav class="main-nav main-nav--opened main-nav--nojs">
+  <nav class="main-nav main-nav--closed main-nav--nojs">
     <button class="main-nav__toggle" type="button">
       <span class="visually-hidden">Открыть меню</span>
     </button>
@@ -16,4 +16,5 @@
       </ul>
     </div>
   </nav>
+  <script src="build/js/script.js"></script>
 </header>
