--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -10,10 +10,18 @@
   background-color: #ffffff;
   cursor: pointer;
   border: none;
+
+  @media (--not-mobile) {
+    display: none;
+  }
 }
 
 .main-nav {
   height: 56px;
+
+  @media (--not-mobile) {
+    background-color: #ffffff;
+  }
 }
 
 .main-nav--closed .main-nav__toggle::before {
