--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -1,6 +1,20 @@
 .site-list {
   padding: 0;
   margin: 0;
+
+  @media (--not-mobile) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+  }
+
+  @media (--tablet) {
+    width: 768px;
+  }
+
+  @media (--desctop) {
+    width: 1200px;
+  }
 }
 
 .site-list__item {
@@ -10,7 +24,36 @@
   background-color: #81b3d2;
   border-bottom: 1px solid rgba(1, 1, 1, 0.2);
   border-top: 1px solid rgba(255, 255, 255, 0.2);
+
+  @media (--tablet) {
+    width: 153px;
+    text-align: center;
+    padding-top: 18px;
+    padding-bottom: 17px;
+    background-color: #ffffff;
+    border: 0;
+  }
+
+  @media (--desktop) {
+    width: 240px;
+    text-align: center;
+    padding-top: 18px;
+    padding-bottom: 17px;
+    background-color: #ffffff;
+    border: 0;
+  }
 }
+
+.site-list__item:nth-child(2) {
+  @media (--tablet) {
+    margin-right: 153px;
+  }
+
+  @media (--desktop) {
+    margin-right: 240px;
+  }
+}
+
 
 .site-list a {
   font-family: "PT Sans", sans-serif;
@@ -22,4 +65,14 @@
   list-style-type: none;
   text-transform: uppercase;
   color: #ffffff;
+
+  @media (--not-mobile) {
+    font-size: 14px;
+    line-height: 21px;
+    color: #000000;
+
+    &:hover {
+      color: #766357;
+    }
+  }
 }
