--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -26,3 +26,5 @@
 @import "./blocks/video.scss";
 @import "./blocks/site-list.scss";
 @import "./blocks/main-nav.scss";
+@import "./blocks/main-container.scss";
+@import "./blocks/main-form.scss";
