--- a/source/sass/blocks/impression.scss
+++ b/source/sass/blocks/impression.scss
@@ -1,3 +1,11 @@
+.impression::after {
+  content: "";
+  position: absolute;
+  width: 320px;
+  height: 1px;
+  background-color: #e5e5e5;
+}
+
 .impression__title {
   font-weight: 700;
   font-size: 18px;
