--- a/source/sass/blocks/your-contact.scss
+++ b/source/sass/blocks/your-contact.scss
@@ -12,6 +12,13 @@
   }
 }
 
+.your-contact::after {
+  content: "";
+  position: absolute;
+  width: 320px;
+  height: 1px;
+  background-color: #e5e5e5;
+}
 
 .your-contact__title {
   font-weight: 700;
