--- a/source/sass/blocks/your-self.scss
+++ b/source/sass/blocks/your-self.scss
@@ -1,3 +1,11 @@
+.your-self::after {
+  content: "";
+  position: absolute;
+  width: 320px;
+  height: 1px;
+  background-color: #e5e5e5;
+}
+
 .your-self__title {
   text-transform: uppercase;
   text-align: center;
