--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -28,3 +28,5 @@
 @import "./blocks/main-nav.scss";
 @import "./blocks/main-container.scss";
 @import "./blocks/main-form.scss";
+@import "./blocks/mistake-container.scss";
+@import "./blocks/modal-container.scss";
