--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -32,7 +32,7 @@
   width: 22.9px;
   height: 4px;
   background-color: #81b3d2;
-  box-shadow: 0 9px 0 0 #81b3d2, 0 18px 0 0 #81b3d2;
+  mask-image: url(../../icons/sprite.svg#burger);
 
   &:hover {
     opacity: 0.6;
@@ -92,6 +92,22 @@
   height: 7px;
 }
 
+.main-nav--closed .main-nav__list {
+  display: none;
+}
+
+.main-nav--opened .main-header__logo {
+  display: none;
+}
+
+.main-header__logo {
+  z-index: 1;
+  margin: 0 auto;
+}
+
+.main-nav__list {
+  z-index: 2;
+}
 
 // добавил как в BARBERSHOP ниже
 .main-nav--nojs .main-nav__toggle {
