--- a/source/templates/_layout.twig
+++ b/source/templates/_layout.twig
@@ -15,7 +15,7 @@
   {% block main %}{% endblock %}
 
   {% include "./footer.twig" %}
-  <script src="build/js/script.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
