--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -1,5 +1,5 @@
 <header class="main-header">
-  <nav class="main-nav main-nav--closed main-nav--nojs">
+  <nav class="main-nav main-nav--opened main-nav--nojs">
     <button class="main-nav__toggle" type="button">
       <span class="visually-hidden">Открыть меню</span>
     </button>
