--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -5,20 +5,20 @@
   color: #ffffff;
 }
 
+.main-header__logo {
+  @media (--not-mobile) {
+    grid-area: 1 / 3 / 2 / 4;
+    height: 53px;
+  }
+}
+
+
 .main-header__logo-image {
-  position: absolute;
-  top: 0;
+  display: block;
   height: 96px;
   width: 185px;
-  margin-left: 67px;
 
-  @media (--tablet) {
-    margin: 0;
-    left: 291px;
-  }
-
-  @media (--desktop) {
-    margin: 0;
-    left: 508px;
+  @media (--mobile) {
+    order: 1;
   }
 }
