--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,99 +1,83 @@
+.main-nav {
+  height: 56px;
+
+  &--closed {
+    @media (--mobile) {
+      display: flex;
+    }
+  }
+}
+
+.main-nav__wrapper {
+  @media (--mobile) {
+    margin-left: 67px;
+  }
+
+  @media (--tablet) {
+    display: grid;
+    grid-template-columns: 153px 153px 153px 153px 153px;
+    background-color: #ffffff;
+  }
+
+  @media (--desktop) {
+    display: grid;
+    grid-template-columns: 240px 240px 240px 240px 240px;
+    background-color: #ffffff;
+  }
+}
+
 .main-nav__toggle {
   padding: 0;
-  position: absolute;
   display: block;
-  top: 17px;
-  right: 20px;
   z-index: 2;
   width: 22.9px;
   height: 22px;
   background-color: #ffffff;
   cursor: pointer;
   border: none;
+  order: 2;
+  margin-top: 17px;
+  margin-left: 25px;
 
   @media (--not-mobile) {
     display: none;
   }
 }
 
-.main-nav {
-  height: 56px;
-
-  @media (--not-mobile) {
-    background-color: #ffffff;
-  }
-}
-
 .main-nav--closed .main-nav__toggle::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 22.9px;
-  height: 4px;
-  background-color: #81b3d2;
-  mask-image: url(../../icons/sprite.svg#burger);
-
-  &:hover {
-    opacity: 0.6;
+  @media (--mobile) {
+    content: "";
+    display: block;
+    width: 22.9px;
+    height: 22px;
+    background-color: #81b3d2;
+    mask-image: url(../../icons/sprite.svg#burger);
   }
-
-  &:active {
-    opacity: 0.3;
-  }
-}
-
-.main-nav--closed .main-nav__toggle:active::before {
-  background-color: fade(#ffffff, 30%);
-  box-shadow:
-    0 9px 0 0 fade(#ffffff, 30%),
-    0 18px 0 0 fade(#ffffff, 30%);
 }
 
 .main-nav--opened .main-nav__toggle {
-  top: 17px;
-  left: 285px;
-  background-color: #81b3d2;
-
-  &::before,
-  &::after {
-    content: "";
-    position: absolute;
-    right: 0;
-    top: 17px;
-    left: 285px;
-    width: 22.9px;
-    height: 4px;
-    background-color: #ffffff;
-  }
-
-  &::before {
-    transform: rotate(45deg);
-    box-shadow: none;
-  }
-
-  &::after {
-    transform: rotate(-45deg);
-  }
-
-  &:active::before,
-  &:active::after {
-    background-color: fade(#ffffff, 30%);
+  @media (--mobile) {
+    background-color: #81b3d2;
   }
 }
 
-.main-nav--opened .main-nav__wrapper::before {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  z-index: 2;
-  width: 100%;
-  height: 7px;
+.main-nav--opened .main-nav__toggle::before {
+  @media (--mobile) {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 22.2px;
+    height: 22.2px;
+    background-color: #ffffff;
+    mask-image: url(../../icons/sprite.svg#cross);
+  }
 }
 
 .main-nav--closed .main-nav__list {
-  display: none;
+  @media (--mobile) {
+    display: none;
+  }
 }
 
 .main-nav--opened .main-header__logo {
@@ -106,10 +90,12 @@
 }
 
 .main-nav__list {
-  z-index: 2;
+  @media (--mobile) {
+    z-index: 2;
+    list-style-type: none;
+  }
 }
 
-// добавил как в BARBERSHOP ниже
 .main-nav--nojs .main-nav__toggle {
   display: none;
 }
