--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -2,18 +2,18 @@
   padding: 0;
   margin: 0;
 
-  @media (--not-mobile) {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-  }
-
   @media (--tablet) {
+    display: grid;
+    grid-area: 1 / 1 / 2 / 6;
     width: 768px;
+    grid-template-columns: 153px 153px 153px 153px 153px;
   }
 
-  @media (--desctop) {
+  @media (--desktop) {
+    display: grid;
+    grid-area: 1 / 1 / 2 / 6;
     width: 1200px;
+    grid-template-columns: repeat(5, 1fr);
   }
 }
 
@@ -26,7 +26,6 @@
   border-top: 1px solid rgba(255, 255, 255, 0.2);
 
   @media (--tablet) {
-    width: 153px;
     text-align: center;
     padding-top: 18px;
     padding-bottom: 17px;
@@ -35,7 +34,6 @@
   }
 
   @media (--desktop) {
-    width: 240px;
     text-align: center;
     padding-top: 18px;
     padding-bottom: 17px;
@@ -43,17 +41,6 @@
     border: 0;
   }
 }
-
-.site-list__item:nth-child(2) {
-  @media (--tablet) {
-    margin-right: 153px;
-  }
-
-  @media (--desktop) {
-    margin-right: 240px;
-  }
-}
-
 
 .site-list a {
   font-family: "PT Sans", sans-serif;
@@ -75,4 +62,25 @@
       color: #766357;
     }
   }
+}
+
+
+.site-list__item:nth-child(1) {
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+
+.site-list__item:nth-child(2) {
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+
+.site-list__item:nth-child(3) {
+  grid-column: 4/5;
+  grid-row: 1/2;
+}
+
+.site-list__item:nth-child(4) {
+  grid-column: 5/6;
+  grid-row: 1/2;
 }
