--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -66,21 +66,29 @@
 
 
 .site-list__item:nth-child(1) {
-  grid-column: 1/2;
-  grid-row: 1/2;
+  @media (--not-mobile) {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
 }
 
 .site-list__item:nth-child(2) {
-  grid-column: 2/3;
-  grid-row: 1/2;
+  @media (--not-mobile) {
+    grid-column: 2/3;
+    grid-row: 1/2;
+  }
 }
 
 .site-list__item:nth-child(3) {
-  grid-column: 4/5;
-  grid-row: 1/2;
+  @media (--not-mobile) {
+    grid-column: 4/5;
+    grid-row: 1/2;
+  }
 }
 
 .site-list__item:nth-child(4) {
-  grid-column: 5/6;
-  grid-row: 1/2;
+  @media (--not-mobile) {
+    grid-column: 5/6;
+    grid-row: 1/2;
+  }
 }
