--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,7 +1,6 @@
 @import "./global/global.scss";
 @import "./blocks/page__body.scss";
 @import "./blocks/button.scss";
-@import "./blocks/main-container.scss";
 @import "./blocks/benefits.scss";
 @import "./blocks/advantages.scss";
 @import "./blocks/information.scss";
@@ -15,17 +14,19 @@
 @import "./blocks/catalog.scss";
 @import "./global/fonts.scss";
 @import "./global/viewports.scss";
+@import "./blocks/main-container.scss";
 @import "./blocks/main-header.scss";
 @import "./blocks/main-footer.scss";
+@import "./blocks/main-nav.scss";
+@import "./blocks/main-form.scss";
+@import "./blocks/main-index.scss";
+@import "./blocks/main-catalog.scss";
 @import "./blocks/photo-sedona.scss";
 @import "./blocks/maps.scss";
-@import "./blocks/main-index.scss";
 @import "./blocks/copyright.scss";
 @import "./blocks/visually-hidden.scss";
 @import "./blocks/social.scss";
 @import "./blocks/video.scss";
 @import "./blocks/site-list.scss";
-@import "./blocks/main-nav.scss";
-@import "./blocks/main-form.scss";
 @import "./blocks/mistake-container.scss";
 @import "./blocks/modal-container.scss";
