--- a/source/sass/blocks/main-catalog.scss
+++ b/source/sass/blocks/main-catalog.scss
@@ -2,7 +2,7 @@
   content: "";
   display: block;
   width: 100%;
-  height: 290px; /* тут не помню сколько оно по высоте */
+  height: 214px; /* тут не помню сколько оно по высоте */
   background-image:
     url("../../icons/sprite.svg#SEDONA-catalog"),
     url("../../icons/sprite.svg#zig-zag"),
@@ -22,11 +22,23 @@
     background-size:
       282px,
       1200px,
-      cover;
+      1200px 518px;
 
     background-position:
       center, /* центрирование */
       bottom -572px center, /* прижимаем загогулину к низу */
-      center; /* при ковровой растяжке фотки лучше всего отцентрировать */
+      bottom; /* при ковровой растяжке фотки лучше всего отцентрировать */
+  }
+
+  @media (--not-mobile) {
+    background-size:
+      282px,
+      1200px,
+      1200px 518px;
+
+    background-position:
+      center,
+      bottom -572px center, /* прижимаем загогулину к низу */
+      bottom; /* при ковровой растяжке фотки лучше всего отцентрировать */
   }
 }
