--- a/source/sass/blocks/emotions.scss
+++ b/source/sass/blocks/emotions.scss
@@ -13,7 +13,7 @@
     margin: 42px auto 28px;
   }
 
-  @media (--tablet) {
+  @media (--desktop) {
     font-size: 21px;
     width: 400px;
     margin: 56px auto 28px;
