--- a/source/sass/blocks/impression.scss
+++ b/source/sass/blocks/impression.scss
@@ -1,9 +1,11 @@
 .impression::after {
-  content: "";
-  position: absolute;
-  width: 320px;
-  height: 1px;
-  background-color: #e5e5e5;
+  @media (--mobile) {
+    content: "";
+    position: absolute;
+    width: 320px;
+    height: 1px;
+    background-color: #e5e5e5;
+  }
 }
 
 .impression__title {
