--- a/source/sass/blocks/your.scss
+++ b/source/sass/blocks/your.scss
@@ -13,3 +13,23 @@
     margin-bottom: 56px;
   }
 }
+
+.your::after {
+  @media (--not-mobile) {
+    content: "";
+    position: absolute;
+    top: 725px;
+    transform: rotate(90deg);
+    width: 338px;
+    height: 1px;
+    background-color: #e5e5e5;
+  }
+
+  @media (--tablet) {
+    left: 238px;
+  }
+
+  @media (--desktop) {
+    left: 465px;
+  }
+}
