--- a/source/sass/blocks/attraction.scss
+++ b/source/sass/blocks/attraction.scss
@@ -61,7 +61,7 @@
 }
 
 .attraction__text[type="checkbox"]:checked {
-  --icon: url("../../icons/tick.svg");
+  --icon: url("../../icons/sprite.svg#tick");
 }
 
 .attraction__text::before {
