--- a/source/sass/blocks/emotions.scss
+++ b/source/sass/blocks/emotions.scss
@@ -2,6 +2,7 @@
   font-weight: 700;
   font-size: 18px;
   line-height: 26px;
+  display: block;
   text-align: center;
   text-transform: uppercase;
   width: 245px;
@@ -21,6 +22,7 @@
 }
 
 .emotions__field {
+  resize: vertical;
   background: #f2f2f2; /* Цвет фона */
   color: rgba(0, 0, 0, 0.3);
   border: 0; /* Параметры рамки */
