--- a/source/sass/blocks/impression.scss
+++ b/source/sass/blocks/impression.scss
@@ -54,6 +54,12 @@
   font-weight: 700;
   font-size: 18px;
   line-height: 26px;
+  appearance: none;
+  box-sizing: border-box;
+  margin: 0;
+  width: 46px;
+  height: 46px;
+  background: #f2f2f2;
 }
 
 .impression__different[type="radio"] {
@@ -61,7 +67,7 @@
 }
 
 .impression__different[type="radio"]:checked {
-  --icon: url("../../icons/dot.svg");
+  --icon: url("../../icons/sprite.svg#dot");
 }
 
 .impression__different::before {
