--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -33,6 +33,10 @@
   @media (--not-mobile) {
     grid-column: 1/-1;
   }
+
+  @media (--desktop) {
+    display: grid;
+  }
 }
 
 .catalog__item-image {
@@ -54,6 +58,7 @@
   @media (--desktop) {
     width: 1200px;
     height: 400px;
+    grid-area: 1/1/3/2;
   }
 }
 
@@ -88,6 +93,10 @@
 
   @media (--desktop) {
     background-color: transparent;
+    grid-area: 2/1/3/2;
+    color: #ffffff;
+    background-color: #000000;
+    opacity: 0.3;
   }
 }
 
