--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -1,10 +1,6 @@
 <footer class="main-footer">
-
-
   <div class="main-footer__wrapper">
-    <div class="main-footer__contacts contacts">
-      <a class="main-footer__contacts__link" href="https://twitter.com/hashtag/VisitSedona">#visitSEDONA</a>
-    </div>
+    <a class="main-footer__contacts-link" href="https://twitter.com/hashtag/VisitSedona">#visitSEDONA</a>
     <div class="social">
       <b class="social__title visually-hidden">Давайте дружить!</b>
       <ul class="social__list">
@@ -25,12 +21,9 @@
         </li>
       </ul>
     </div>
-    <div class="copyright">
-      <b class="copyright__text">Разработано</b>
-      <svg class="copyright__link" width="27" height="35">
-        <use href="../img/sprite.svg#htmlacademy">
-      </svg>
-      <a class="visually-hidden" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-    </div>
+    <a class="copyright" href="https://htmlacademy.ru/intensive/adaptive">
+      Разработано
+      <span class="visually-hidden">HTML Academy</span>
+    </a>
   </div>
 </footer>
