--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -62,6 +62,12 @@
   }
 }
 
+.catalog__item-two {
+  @media (--desktop) {
+    display: grid;
+  }
+}
+
 .catalog__item-two-image {
   margin: 0;
   padding: 0;
@@ -80,10 +86,14 @@
   @media (--desktop) {
     width: 400px;
     height: 267px;
+    grid-area: 1/1/3/2;
   }
 }
 
 .catalog__signatur {
+  font-family: inherit;
+  font-style: normal;
+
   @media (--not-mobile) {
     display: flex;
     justify-content: space-between;
@@ -92,11 +102,9 @@
   }
 
   @media (--desktop) {
-    background-color: transparent;
     grid-area: 2/1/3/2;
     color: #ffffff;
-    background-color: #000000;
-    opacity: 0.3;
+    background: rgba(0, 0, 0, 0.3);
   }
 }
 
