--- a/source/sass/blocks/emotions.scss
+++ b/source/sass/blocks/emotions.scss
@@ -23,27 +23,42 @@
 
 .emotions__field {
   resize: vertical;
-  background: #f2f2f2; /* Цвет фона */
-  color: rgba(0, 0, 0, 0.3);
-  border: 0; /* Параметры рамки */
-  padding: 16px; /* Поля */
-  width: 279px; /* Ширина */
-  height: 150px; /* Высота */
-  box-sizing: border-box; /* Алгоритм расчёта ширины */
+  background: #f2f2f2;
+  color: rgba(0, 0, 0);
+  border: 0;
+  padding: 16px;
+  width: 279px;
+  height: 150px;
+  box-sizing: border-box;
   font-weight: 700;
   font-size: 18px;
   line-height: 26px;
   margin-left: 20px;
 
+  &:hover {
+    background-color: #e5e5e5;
+  }
+
+  &:focus {
+    background-color: #ffffff;
+    outline: 4px solid #e5e5e5;
+    outline-offset: -4px;
+  }
+
   @media (--tablet) {
     margin-left: 60px;
-    width: 648px; /* Ширина */
-    height: 160px; /* Высота */
+    width: 648px;
+    height: 160px;
   }
 
   @media (--desktop) {
     margin-left: 216px;
-    width: 768px; /* Ширина */
-    height: 160px; /* Высота */
+    width: 768px;
+    height: 160px;
+  }
+
+  &::placeholder {
+    color: rgba(0, 0, 0, 0.3);
+    opacity: 1;
   }
 }
