--- a/source/sass/blocks/impression.scss
+++ b/source/sass/blocks/impression.scss
@@ -21,12 +21,23 @@
     font-size: 21px;
     width: 402px;
     margin: 47px auto 28px;
+    display: grid;
   }
 
   @media (--desktop) {
     font-size: 21px;
     width: 400px;
     margin: 55px auto 28px;
+  }
+}
+
+.impression__title::before {
+  @media (--desktop) {
+    content: "";
+    position: relative;
+    width: 338px;
+    height: 1px;
+    background-color: #e5e5e5;
   }
 }
 
@@ -37,17 +48,28 @@
   font-size: 18px;
   line-height: 26px;
   list-style-type: none;
-  margin-left: 20px;
+
+  @media (--mobile) {
+    margin-left: 20px;
+  }
 
   @media (--tablet) {
+    padding: 0 36px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
   }
 
   @media (--desktop) {
+    text-align: center;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
   }
+}
+
+.impression__item label {
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
 
 .impression__different {
@@ -73,7 +95,10 @@
 .impression__different::before {
   content: "";
   display: block;
-  width: 100%;
-  height: 100%;
+  position: relative;
+  left: calc(50% - 16px / 2 + 0px);
+  top: calc(50% - 16px / 2);
+  width: 16px;
+  height: 16px;
   background: var(--icon) no-repeat center / contain;
 }
