--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,22 +1,8 @@
 .social__list {
   display: flex;
   list-style-type: none;
-  width: 156px;
   padding: 0;
-  margin: auto;
-  margin-bottom: 40px;
-
-  @media (--tablet) {
-    margin-top: 36px;
-    margin-bottom: 36px;
-    margin-right: 100px;
-  }
-
-  @media (--desktop) {
-    margin-top: 36px;
-    margin-bottom: 36px;
-    margin-right: 256px;
-  }
+  margin: 0;
 }
 
 .social__item {
