--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -1,20 +1,19 @@
 <header class="main-header">
   <nav class="main-nav main-nav--opened main-nav--nojs">
-    <button class="main-nav__toggle" type="button">
+    <button class="main-nav__toggle" type="button" hidden>
       <span class="visually-hidden">Открыть меню</span>
     </button>
     <div class="main-nav__wrapper">
-      <a class="main-header__logo" href="index.html" {% if permalink == "index.html" %}aria-current="page"{% endif %}>
-        <img class="main-header__logo-image" src="./img/logo.png" width="185" height="96" alt="Логотип Седона">
+      <a class="main-header__logo" href="index.html" {% if permalink=="index.html" %}aria-current="page" {% endif %}>
+        <img class="main-header__logo-image" src="./img/logo.svg" width="185" height="96" alt="Логотип Седона">
       </a>
-      <ul class="main-nav__list d site-list">
+      <ul class="main-nav__list site-list">
         {% for page in pages %}
-          <li class="site-list__item">
-            <a class="site-list__link" href="{{ page.path }}" {% if permalink == page.path %} aria-current="page" {% endif %}>{{ page.name }}</a>
-          </li>
+        <li class="site-list__item">
+          <a class="site-list__link" href="{{ page.path }}" {% if permalink==page.path %} aria-current="page" {% endif %}>{{ page.name }}</a>
+        </li>
         {% endfor %}
       </ul>
     </div>
   </nav>
-  <script src="build/js/script.js"></script>
 </header>
