--- a/source/templates/_layout.twig
+++ b/source/templates/_layout.twig
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <title>{{ pages[pageId].name }} | Sedona | HTML Academy</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="preload" href="./fonts/ptsans.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="./fonts/ptsansbold.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="icon" href="../favicon/favicon32.svg" type="image/svg+xml">
 </head>
