--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -20,6 +20,15 @@
       font-size: 21px;
       width: 458px;
     }
+
+    &:hover {
+      background: #669ec0;
+    }
+
+    &:active {
+      background: #5496bd;
+      color: rgba(255, 255, 255, 0.3);
+    }
   }
 
   &--form {
@@ -29,58 +38,5 @@
     padding: 18.5px 33px 13.5px;
     text-transform: uppercase;
     border: 0;
-  }
-}
-
-.button--index:hover {
-  background: #669ec0;
-}
-
-.button--index:active {
-  background: #5496bd;
-  color: rgba(255, 255, 255, 0.3);
-}
-
-.button__index {
-  margin: auto;
-  margin-top: 32px;
-  margin-bottom: 49px;
-}
-
-
-.button__form {
-  margin: auto;
-  margin-top: 56px;
-  text-align: center;
-
-  @media (--not-mobile) {
-    margin-top: 48px;
-    margin-bottom: 64px;
-    display: flex;
-    justify-content: space-between;
-  }
-
-  @media (--tablet) {
-    margin-left: 60px;
-    margin-right: 60px;
-  }
-
-  @media (--desktop) {
-    margin-left: 216px;
-    margin-right: 216px;
-  }
-}
-
-.button__text {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 21px;
-  color: rgba(51, 51, 51, 0.6);
-  margin: 0;
-  margin-right: 20px;
-  text-align: right;
-
-  @media (--not-mobile) {
-    margin: 0;
   }
 }
