--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,6 +1,9 @@
+@import "./global/viewports.scss";
+@import "./global/fonts.scss";
 @import "./global/global.scss";
 @import "./blocks/page__body.scss";
 @import "./blocks/button.scss";
+@import "./blocks/form.scss";
 @import "./blocks/benefits.scss";
 @import "./blocks/advantages.scss";
 @import "./blocks/information.scss";
@@ -12,8 +15,6 @@
 @import "./blocks/attraction.scss";
 @import "./blocks/emotions.scss";
 @import "./blocks/catalog.scss";
-@import "./global/fonts.scss";
-@import "./global/viewports.scss";
 @import "./blocks/main-container.scss";
 @import "./blocks/main-header.scss";
 @import "./blocks/main-footer.scss";
